add better centering

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -38,14 +38,15 @@
     }
 
     .wrapper {
-        height: 95vmin;
-        width: 95vmin;
+        height: 100vmin;
+        width: 100vmin;
         overflow: hidden;
     }
 
     .circle-chart {
         width: 95vmin;
         height: 95vmin;
+        margin: 2.5vmin;
     }
 
     .circle-chart__circle {
