--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,14 +22,16 @@
 
     body {
         height: 100vh;
+        display: flex;
+        justify-content: center;
     }
 
     .centered {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         text-align: center;
+        display: flex;
+        justify-content: center;
+        align-self: center;
     }
 
     .huge {
