prepare for pwa

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,12 +7,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="A very simple and cute countdown timer">
+    <meta name="theme-color" content="#66bf13">
     <meta name="author" content="Karl Adler">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
     <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+
+    <link rel="manifest" href="/manifest.json">
 </head>
 <style>
     * {
@@ -68,7 +71,7 @@
         <svg class="circle-chart" viewbox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg">
             <circle class="circle-chart__background" stroke="#efefef" stroke-width="2" fill="none" cx="50" cy="50"
                 r="48" />
-            <circle class="circle-chart__circle" id="progress-circle" stroke="#00acc1" stroke-width="2" stroke-linecap="round"
+            <circle class="circle-chart__circle" id="progress-circle" stroke="#66bf13" stroke-width="2" stroke-linecap="round"
                 fill="none" cx="50" cy="50" r="48" stroke-dasharray="0,300" />
         </svg>
         <span id="timer" class="centered digits" onClick="toggle()"></span>
