--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="A very simple and cute countdown timer">
     <meta name="theme-color" content="#66bf13">
     <meta name="author" content="Karl Adler">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" media="min-width:300">
 
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -75,6 +75,8 @@
                 fill="none" cx="50" cy="50" r="48" stroke-dasharray="0,300" />
         </svg>
         <span id="timer" class="centered digits" onClick="toggle()"></span>
+
+        <noscript>please enable javascript to start the timer</noscript>
 
     </div>
     <script>
