--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,6 @@
     <meta name="description" content="A very simple and cute countdown timer">
     <meta name="theme-color" content="#66bf13">
     <meta name="author" content="Karl Adler">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" media="min-width:300">
 
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -18,6 +17,7 @@
     <link rel="manifest" href="/manifest.json">
 </head>
 <style>
+    @import url('https://fonts.googleapis.com/css?family=Inconsolata');
     * {
         margin: 0;
         padding: 0;
