--- a/public_html/index.html
+++ b/public_html/index.html
@@ -80,6 +80,16 @@
 
     </div>
     <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+        .then(function(registration) {
+            console.log('Registration successful, scope is:', registration.scope);
+        })
+        .catch(function(error) {
+            console.log('Service worker registration failed, error:', error);
+        });
+        }
+
         var dayFactor = 1000 * 60 * 60 * 24;
         var hoursFactor = 1000 * 60 * 60;
         var minutesFactor = 1000 * 60;
