--- a/public_html/index.html
+++ b/public_html/index.html
@@ -81,7 +81,7 @@
     </div>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
         .then(function(registration) {
             console.log('Registration successful, scope is:', registration.scope);
         })
