remove google font

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,6 @@
     <meta name="description" content="A very simple and cute countdown timer">
     <meta name="theme-color" content="#66bf13">
     <meta name="author" content="Karl Adler">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <link rel="manifest" href="manifest.json">
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -39,7 +38,7 @@
 
     .huge {
         font-size: 20vmin;
-        font-family: 'Inconsolata', monospace;
+        font-family: "Courier New", Courier, monospace;
     }
 
     .small, .small a {
