--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109503004-1"></script>
+    <script src="./NoSleep.min.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -82,7 +83,6 @@
 </style>
 
 <body>
-    <script async src="./NoSleep.min.js"></script>
     <div class="centered wrapper">
         <svg class="circle-chart" viewbox="0 0 100 100" width="100" height="100" xmlns="http://www.w3.org/2000/svg">
             <circle class="circle-chart__background" stroke="#efefef" stroke-width="2" fill="none" cx="50" cy="50"
