--- a/public/index.html
+++ b/public/index.html
@@ -19,68 +19,12 @@
     <meta name="description" content="A very simple and cute countdown timer">
     <meta name="theme-color" content="#66bf13">
     <meta name="author" content="Karl Adler">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    body {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-    }
-
-    .centered {
-        position: absolute;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-self: center;
-    }
-
-    .huge {
-        font-size: 18vmin;
-        font-family: "Courier New", Courier, monospace;
-    }
-
-    .small, .small a {
-        font-size: 0.5em;
-        color: #efefef;
-    }
-
-    .bottom {
-        position: absolute;
-        bottom: 1px;
-    }
-
-    .wrapper {
-        height: 100vmin;
-        width: 100vmin;
-        overflow: hidden;
-    }
-
-    .circle-chart {
-        width: 95vmin;
-        height: 95vmin;
-        margin: 2.5vmin;
-    }
-
-    .circle-chart__circle {
-        transition: stroke-dasharray .1s linear;
-        transform: rotate(-90deg);
-        transform-origin: center;
-    }
-
-    .digits {
-        cursor: pointer;
-    }
-</style>
 
 <body>
     <div class="centered wrapper">
@@ -94,110 +38,7 @@
 
         <noscript>please enable javascript to start the timer</noscript>
     </div>
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js')
-        .then(function(registration) {
-            console.log('Registration successful, scope is:', registration.scope);
-        })
-        .catch(function(error) {
-            console.log('Service worker registration failed, error:', error);
-        });
-        }
-
-        var dayFactor = 1000 * 60 * 60 * 24;
-        var hoursFactor = 1000 * 60 * 60;
-        var minutesFactor = 1000 * 60;
-        var secondsFactor = 1000;
-
-        var left;
-        var duration;
-        var countDownDate;
-        var start;
-
-        var clocks = ['🕐','🕑','🕒','🕓','🕔','🕕','🕖','🕗','🕘','🕙','🕚','🕛'].reverse();
-
-        var noSleep = new NoSleep();
-
-        function enableNoSleep() {
-            noSleep.enable();
-            //document.removeEventListener('click', enableNoSleep, false);
-        }
-
-        document.addEventListener('click', go, false);
-
-        reset();
-        // go();
-
-        function reset() {
-            // TODO: proper reset  + UI
-            var url = new URL(location.href);
-            var d = parseInt(url.searchParams.get('d') || 0, 10) * dayFactor;
-            var h = parseInt(url.searchParams.get('h') || 0, 10) * hoursFactor;
-            var m = (parseInt(url.searchParams.get('m') || 0, 10) * minutesFactor);
-            var s = parseInt(url.searchParams.get('s') || 0, 10) * secondsFactor;
-
-            duration = (d + h + m + s);
-            if (duration === 0) {
-                duration = 15 * minutesFactor;
-            }
-            left = duration;
-        }
-
-        function toggle() {
-            if (!timer) {
-                countDownDate = new Date().getTime() + left;
-                timer = setInterval(iteration, 100);
-            } else {
-                var now = new Date().getTime();
-                left = countDownDate - now; // set new duration by distance
-
-                clearInterval(timer);
-                timer = false;
-            }
-        }
-
-        function go() {
-            document.removeEventListener('click', go, false);
-
-            noSleep.enable();
-            start = new Date().getTime();
-            countDownDate = start + duration;
-            timer = setInterval(iteration, 100);
-        }
-
-        var counter = 0;
-        function iteration() {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
-            var progress = ((duration - (distance-1000)) / duration) * 100;
-            var days = Math.floor(distance / dayFactor);
-            var hours = Math.floor((distance % dayFactor) / hoursFactor);
-            var minutes = Math.floor((distance % hoursFactor) / minutesFactor);
-            var seconds = Math.floor((distance % minutesFactor) / secondsFactor);
-
-            var daysOut = days > 0 ? days + ' days &shy;' : '';
-            var hoursOut = ('00' + hours).substr(-2, 2) + ':';
-            var minutesOut = ('00' + minutes).substr(-2, 2) + ':';
-            var secondsOut = ('00' + seconds).substr(-2, 2);
-
-            document.getElementById('timer').innerHTML = daysOut + hoursOut + minutesOut + secondsOut;
-
-            if (minutes < 1) {
-                document.title = secondsOut + ' s';
-            } else {
-               document.title = clocks[seconds % 12];
-            }
-
-            document.getElementById('progress-circle').setAttribute('stroke-dasharray', progress * 3 + ',300');
-
-            if (distance < 0) {
-                clearInterval(timer);
-                document.getElementById('timer').innerHTML = 'finished';
-                document.title = 'finished';
-            }
-        }
-    </script>
+    <script src="main.js" ></script>
 </body>
 
 </html>
