switch to requestAnimationFrame instead of timers for better performance and less battery usage

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta name="author" content="Karl Adler">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="images/icon256x256.png">
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
