--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109503004-1"></script>
     <script src="./NoSleep.min.js"></script>
+    <script src='./zingtouch.min.js'></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
