--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,12 @@
                 r="48" />
             <circle class="circle-chart__circle" id="progress-circle" stroke="#66bf13" stroke-width="2" stroke-linecap="round"
                 fill="none" cx="50" cy="50" r="48" stroke-dasharray="0,300" />
-        </svg>
-        <span id="timer" class="centered digits huge" onClick="toggle()"></span>
-
+            </svg>
+        <span id="hint" class="hint centered">Spin me!</span>
+        <span id="reset-button" class="centered digits huge upper control hidden">◼</span>
+        <span id="timer" class="centered digits huge"></span>
+        <span id="start-button" class="centered digits huge lower control">▶</span>
+        <span id="pause-button" class="centered digits huge lower control hidden">❙❙</span>
         <noscript>please enable javascript to start the timer</noscript>
     </div>
     <script src="main.js" ></script>
